--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
                       <option value="energy">Energy</option>
                       <option value="key">Key</option>
                       <option value="loudness">Loudness</option>
-                      <option value="mode">Mode</option>
+                      <!-- <option value="mode">Mode</option> -->
                       <option value="speechiness">Speechiness</option>
                       <option value="instrumentalness">Instrumentallness</option>
                       <option value="acousticness">Acousticness</option>
@@ -105,7 +105,7 @@
                       <option value="energy">Energy</option>
                       <option value="key">Key</option>
                       <option value="loudness">Loudness</option>
-                      <option value="mode">Mode</option>
+                      <!-- <option value="mode">Mode</option> -->
                       <option value="speechiness">Speechiness</option>
                       <option value="instrumentalness">Instrumentallness</option>
                       <option value="acousticness">Acousticness</option>
