--- a/src/index.html
+++ b/src/index.html
@@ -3,53 +3,30 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Spotify Tools</title> <!--Needs better title-->
+        <title>Chronography</title>
 
+        <!-- JS -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="lib/bower_components/chartist/dist/chartist.min.js"></script>
         <script src="lib/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
-        <script src="https://d3js.org/d3.v4.min.js"></script>
-        
         <script src="lib/underscore-min.js"></script>
         <script src="lib/sc.js"></script>
 
-
         <!-- CSS -->
-
         <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
-        <!--custom/override styles-->
         <link rel="stylesheet" href="lib/bower_components/chartist/dist/chartist.min.css">
-        <link rel="stylesheet" href="stylesheet.css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="avgs.css" media="screen" title="no title" charset="utf-8">
     </head>
 
     <body>
-        <script src="lib/bower_components/chartist/dist/chartist.min.js"></script>
-        <!-- navigation bar  -->
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="avgs.html">
-                    <span id="header-title">Spotify Toolbox</span></a>
-                </div>
-
-                <div class="collapse navbar-collapse">
-                    <ul id="options" class="nav navbar-nav navbar-right">
-                      <li><a class="option" 
-                      href="https://github.com/bmachlin/chronography" 
-                      id='show-about'>Source</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <!-- content -->
+        
         <div class="container-fluid" id="main-contain">
-            <div class="row" id="title-row"></div>
 
             <div class="row" id="content-row">
 
                   <div id ="intro" class="container">
 
-                      <h1><a href="avgs.html">Chronography</a></h1>
+                      <h1><a href="/">C H R O N O G R A P H Y</a></h1>
                       <p class="lead" id="description">This tool allows you to select a group of songs, e.g. an album, a playlist, and calculates the average properties of the songs.</p>
                       <div id="buttons" class="row">
 
@@ -128,7 +105,7 @@
           </div>
         <script src="avgs-processing.js"></script>
         <script src="avgs-search-results.js"></script>
-        <script src="avgs3.js"></script>
+        <script src="avgs.js"></script>
     </body>
 </html>
 
