began processing rewrite, fixing print statements, fixed config

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,8 @@
               </div>
 
           </div>
-        <script src="avgs-processing.js"></script>
+        <script src="config.js"></script>
+        <script src="avgs-processing-rewrite.js"></script>
         <script src="avgs-search-results.js"></script>
         <script src="avgs.js"></script>
     </body>
