shrinking things, temp removing artist and playlist buttons

--- a/src/index.html
+++ b/src/index.html
@@ -27,19 +27,21 @@
                   <div id ="intro" class="container">
 
                       <h1><a href="/">C H R O N O G R A P H Y</a></h1>
-                      <p class="lead" id="description">This tool allows you to select a group of songs, e.g. an album, a playlist, and calculates the average properties of the songs.</p>
+                      <!-- <p class="lead" id="description">This tool allows you to 
+                          select a group of songs, e.g. an album, a playlist, 
+                          and calculates the average properties of the songs.</p> -->
                       <div id="buttons" class="row">
 
                           <span class="col-xs-offset-2 xform-control">
 
-                              <button class="btn btn-outline-default btn-sm" id='playlists-button' type="button">Show My Playlists</button> 
+                              <!-- <button class="btn btn-outline-default btn-sm" id='playlists-button' type="button">Show My Playlists</button>  -->
 
                           </span>
 
                           <div class='input-group' id="input">
                               <form id="search">
-                                  <input type="text" name="artist">
-                                  <input type="submit" value="Search for Artist" id="artist-search">
+                                  <!-- <input type="text" name="artist"> -->
+                                  <!-- <input type="submit" value="Search for Artist" id="artist-search"> -->
                                   <input type="text" name="album">
                                   <input type="submit" value="Search for Album" id="album-search">
                               </form>
